# LlamaFinance

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  test.py
.github/workflows/: python-app.yml
openai/: main.py
openai/args/: __init__.py  args.py
openai/tools/: stock_business_info_tools.py  stock_data_tools.py  stock_news_tool.py
requirements/: requirements_amd.txt  requirements_nvidia.txt
scripts/: dev_setup_nvidia.sh
scripts/development/: dev_setup_amd.sh  dev_setup_nvidia.sh  dev_setup_openai.sh
scripts/usage/: run_openai.sh  run_transformers.sh
src/args/: __init__.py
src/openai/: api.py  main.py
src/transformers/: .example.env  api.py  api_awq.py  api_bnb.py  transformers_llm.py  transformers_quantisation_awq.py  transformers_quantised_bnb.py
