[tool.poetry]
name = "stock-gpt"
version = "0.1.0"
description = "An enhanced ChatGPT specialized for stock market-related tasks and applications."
authors = ["Viraj Shah <viraj.v.shah03@gmail.com>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"
langchain = "^0.0.345"
pandas = "^2.1.3"
pydantic = "^2.5.2"
yfinance = "^0.2.32"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
